demo03-rabbitmq/producer-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: rabbitmq-producer
spec:
  containers:
    - name: rabbitmq-producer
      image: ::image::
