demo03-rabbitmq/rabbitmq-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: rabbitmq
spec:
  rules:
    - host: ::hostname::
      http:
        paths:
          - backend:
              serviceName: rabbitmq
              servicePort: 15672
            path: /
